flang/test/semantics/resolve10.f90
module m
  public
  !ERROR: The default accessibility of this module has already been declared
  private
end
